--- a/public/login.html
+++ b/public/login.html
@@ -29,25 +29,25 @@
         <label for="password">Password:</label>
         <input type="password" title="password" name="password">
         <br>
-        <label for="familycode">Familiekode:</label>
-        <input type="text" title="familycode" name="familycode">
-        <br>
-        <label for="epost">Epost:</label>
-        <input type="mail" title="mail" name="epost">
-        <br>
         <label for="mobile">Mobil:</label>
         <input type="text" title="mobile" name="mobile">
         <br>
+        <label for="epost">Epost:</label>
+        <input type="mail" title="email" name="email">
+        <br>
+        <label for="familycode">Familiekode:</label>
+        <input type="text" title="familycode" name="familycode">
+        <br>
         <label for="role">Rolle:</label>
         <input type="number" title="role" name="role">
-
-
+        <br>
+        <br>
         <button type="submit" name="login">Register</button>
     </form>
     <div>
       <button class = "loginRegBtn" id="btnLogin">Login</button>
       <button class = "loginRegBtn" id="btnRegister">Register</button>
   </div>
-  <script src="./ryddeappLogin.js"></script>  
+  <script src="./ryddeappLogin.js"></script>
 </body>
 </html>
